syntax = "proto3";

package protocol;

option java_package = "org.vision.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "VoteAssetContract"; //Specify the class name of the generated Java file

message VoteAssetContract {
  bytes owner_address = 1;
  repeated bytes vote_address = 2;
  bool support = 3;
  int32 count = 5;
}